--- a/stylesheet.css
+++ b/stylesheet.css
@@ -31,7 +31,7 @@ br {
     line-height: 150%;
 }
 
-.row {
+.section_row {
     min-height: 10px;
 }
 
